# SystemDesign

./: .gitignore  README.md  workspace.dsl
lab2/: CMakeLists.txt  README.md
lab2/config/: static_config.yaml
lab2/docker/: Dockerfile
lab2/src/: main.cpp
lab2/src/api/: api_utils.cpp
lab2/src/api/handlers/: hotel_handlers.hpp  user_handlers.cpp
lab2/src/api/middleware/: session_auth_middleware.hpp
lab2/src/components/: hotel_booking_service_component.hpp
lab2/src/domain/: models.hpp  service.cpp  service.hpp
lab2/tests/: service_test.cpp
lab3/: CMakeLists.txt  Dockerfile  README.md  data.sql  docker-compose.yaml  optimization.md  queries.sql  schema.sql
lab3/config/: static_config.yaml
lab3/docker/: docker-compose.yaml
lab3/docs/: openapi.yaml
lab3/src/: main.cpp
lab3/src/api/handlers/: booking_handlers.cpp
lab3/src/components/: hotel_booking_service_component.hpp
lab3/src/domain/: service.cpp  service.hpp
lab4/: CMakeLists.txt  README.md  data.js  docker-compose.yml  queries.js  schema.sql  validation.js
lab4/config/: static_config.yaml
lab4/docker/: Dockerfile  docker-compose.yaml  gateway.Dockerfile
lab4/mongo-init/: 01-init.js
lab4/src/: main.cpp
lab4/src/api/handlers/: booking_handlers.hpp
lab4/src/components/: hotel_booking_service_component.hpp
lab4/src/domain/: service.cpp  service.hpp
lab4/tests/: run.sh
lab5/: CMakeLists.txt  README.md  data.js  data.sql  docker-compose.yaml  performance_design.md  queries.js  validation.js
lab5/config/: static_config.yaml
lab5/docker/: Dockerfile  docker-compose.yaml
lab5/mongo-init/: 01-init.js
lab5/src/api/handlers/: auth_handlers.cpp  auth_handlers.hpp  user_handlers.hpp
lab5/src/api/middleware/: session_auth_middleware.cpp
lab5/src/components/: hotel_booking_service_component.hpp
lab5/src/domain/: service.hpp
lab5/tests/: service_test.cpp
lab6/: .dockerignore  CMakeLists.txt  README.md  data.js  docker-compose.yaml  docker-compose.yml  event_catalog.md  event_driven_design.md  queries.js  schema_design.md  validation.js
lab6/config/: static_config.yaml
lab6/docker/: Dockerfile  docker-compose.yaml  gateway-nginx.conf
lab6/events/: Dockerfile  Dockerfile.producer  common.py  consumer.py  producer.py  test_events.sh
lab6/mongo-init/: 01-init.js
lab6/src/: main.cpp
lab6/src/api/: api_utils.hpp
lab6/src/api/handlers/: booking_handlers.cpp  hotel_handlers.cpp
lab6/src/domain/: service.cpp
